# Pro.Engineer.C.MomentConnection.Welds

./: .gitignore  README.md
weld_connection/: CMakeLists.txt
weld_connection/include/: fillet_welds.h  groove_welds.h  min_yield_strength_60.h  stress.h  temp_function.h
weld_connection/resources/: style.css  test.db  welds.glade
weld_connection/src/: fillet_welds.c  groove_welds.c  main.c  min_yield_strength_60.c  stress.c  temp_function.c
weld_connection/tests/: CMakeLists.txt  fillet_welds_test.cpp  groove_welds_test.cpp  main_test.cpp  min_yield_strength_test_60.cpp  sqlite_test.cpp  stress_test.cpp  temp_function_test.cpp
